--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,13 @@
 /* MAIN */
 /* SLIDER */
 /* FEATURES */
-/* ASIDEE */
+/* ARTICLES */
+/* ASIDE */
 /* FOOTER */
 /* DESCRIPTION */
 /* ACORDEON */
+/* BUTTONS */
+
 
 /* RESET  - resetea los estilos por defecto del navegador */
 
@@ -263,6 +266,8 @@ a {
 	/* background-color: #060e23; */
 	/* background-color: #091c3b; */
 	/* color: whitesmoke; */
+	/* transition: 1s; */
+
 }
 
 .Slides__prev, .Slides__next {
@@ -274,7 +279,7 @@ a {
 	color: #0f86f7;
 	font-weight: bold;
 	font-size: 3rem;
-	/* transition: 0.6s ease; */
+	/* transition: 1s ease; */
 	animation: mymove 2s;
     animation-iteration-count: infinite;
 }
@@ -300,14 +305,15 @@ a {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: 400px;
+	height : 400px;
 	margin: .5rem;
 }
 
 .Slides__header {
 	display: flex;
-	align-items: flex-end;
+	align-items: center;
 	margin-top: .5rem;
+    margin-left: .5rem;
 }
 
 .Slides__header h2 {
@@ -336,13 +342,13 @@ a {
 }
 
 .Slides__body span {
-	font-size: 2.5rem;
+	font-size: 3rem;
 	margin-left: 1rem;
 }
 
 .Slides__footer {
 	display: flex;
-	flex-direction: row;
+	/* flex-direction: row; */
 	align-items: center;
 	align-self: flex-end;
 }
@@ -523,11 +529,12 @@ a {
 .Slide__js {
 	animation-name: Slide__js;
 	animation-duration: 2s;
+	/* position: relative */
 }
 
 @keyframes Slide__js {
 	from {
-		opacity: .5
+		opacity: .2
 	}
 	to {
 		opacity: 1
@@ -655,19 +662,22 @@ a {
 		margin-top: 1rem;
 	}
 }
+
+/* ARTICLES */
 /* Articulos__ //////////////////////////////*/
 
 .Articulos {
 	background-color: #091c3b;
-	padding-top: 3rem;
-	padding-bottom: auto;
+	padding-top: 2rem;
+	/* padding-bottom: auto; */
 }
 
 .Articulos__title {
 	font-size: 2rem;
-	margin-left: 1rem;
-	margin-right: 1rem;
-	margin-bottom: 1rem;
+	margin: 1rem;
+	/* margin-left: 1rem; */
+	/* margin-right: 1rem; */
+	/* margin-bottom: 1rem; */
 	font-weight: 300;
 	border-bottom: 4px solid #0f86f7;
 }
@@ -761,6 +771,8 @@ a {
 	font-weight: 500;
 }
 
+
+
 .Articulos--blog .Articulos__title {
 	border-bottom: 4px solid #78fee9;
 }
@@ -831,7 +843,7 @@ a {
 		margin-bottom: 2.5rem;
 	}
 }
-/* ASIDEE */
+/* ASIDE */
 
 .Aside {
 	/* background-color: #091c3b; */
@@ -846,7 +858,7 @@ a {
 	}
 }
 
-/* TABSS */
+/* TABS */
 
 .Tabs__header {
 	display: flex;
@@ -1340,7 +1352,6 @@ div.contenido {
 
 .blue {
 	color: #0f86f7;
-	font-weight: ;
 }
 
 /* WEIGHTS */
