--- a/css/blog2test.css
+++ b/css/blog2test.css
@@ -68,11 +68,15 @@
 
 .Post__body h2{
     padding-top: 1rem;
-    /* margin-bottom: 1rem; */
+    margin-bottom: 1rem;
 }
 
 .Post__body h3{
     padding-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.Post__body h4{
     margin-bottom: 1rem;
 }
 
@@ -90,7 +94,7 @@
     /* margin-top: 1.5rem; */
 }
 
-.Post__semantica li{
+.Post__body li{
     list-style: circle;
     margin-left: 2rem;
     line-height: 1.8rem;
