add javascript post

--- a/css/blog2test.css
+++ b/css/blog2test.css
@@ -47,7 +47,7 @@
     color: #999;
     border-bottom: 1px solid black;
     padding: .3rem;
-    /* margin-bottom: .5rem; */
+    margin-bottom: .5rem;
 }
 
 .Post__data span{
@@ -130,5 +130,8 @@ small {
     margin-left: 0rem !important;
     margin-bottom: 0rem !important;
     margin-top: 0rem !important;
+}
 
+.greenpure {
+    color: green;
 }
