--- a/css/style.css
+++ b/css/style.css
@@ -987,7 +987,7 @@ a {
 }
 
 div.contenido {
-	padding: 0 18px;
+	/* padding: 0 18px; */
 	/* background-color: white; */
 	max-height: 0;
 	overflow: hidden;
@@ -1064,6 +1064,18 @@ div.contenido {
 	
 	}
 }
+
+/* VIDEO */
+
+
+
+/* .Video__embed iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+} */
 
 /* MODAL */
 body {
