--- a/css/curso.css
+++ b/css/curso.css
@@ -209,13 +209,13 @@
 	flex-direction: column;
 	height: 290px;
 	justify-content: space-between;
-	width: 60%;
+	/* width: 60%; */
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .Contacto__formulario input {
-	width: 70%;
+	/* width: 70%; */
 	height: 1.5rem;
 }
 
